cluster/overlays/zahariev.com/youtrack/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: youtrack
  namespace: youtrack
spec:
  rules:
  - host: youtrack.zahariev.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: youtrack
            port:
              number: 8080
  tls:
  - hosts:
    - youtrack.zahariev.com
    secretName: youtrack-tls
